# models/models.go
@@ -1,7 +1,14 @@
 package models
 
-type Post struct {
-	User      string
-	Published bool
-	Desc      string
+type User struct {
+	Firstname  string
+	Lastname   string
+	Pic_format string
+	Address    string
+	Tel        string
+	Balance    int
+	Bio        string
+	Email      string
+	Password   string
+	Desc       string
 }
